[package]
name = "rofuse"
edition = "2018"
version = "0.0.2"
authors = ["payall4u <payall4u@qq.com>"]
description = "Filesystem in Userspace (FUSE) for Rust"
homepage = "https://github.com/payall4u/rofuse"
repository = "https://github.com/payall4u/rofuse"
readme = "README.md"
keywords = ["fuse", "filesystem", "system", "bindings"]
categories = ["external-ffi-bindings", "api-bindings", "filesystem", "os::unix-apis"]
build = "build.rs"
license = "MIT"

[badges]
travis-ci = { repository = "payall4u/rofuse" }

[dependencies]
memmap2 = "0.5.0"
libc = "0.2.51"
log = "0.4.6"
memchr = "2"
users = "0.11.0"
page_size = "0.4.2"
serde = {version = "1.0.102", features = ["std", "derive"], optional = true}
smallvec = "1.6.1"
zerocopy = "0.6.0"
structopt = "0.3"
flexi_logger = "0.19.5"

[dev-dependencies]
env_logger = "0.8"
clap = "2.32"
bincode = "1.3.1"
serde = {version = "1.0.102", features=["std", "derive"]}
tempfile = "3"

[build-dependencies]
pkg-config = {version = "0.3.14", optional = true }

[features]
default = ["libfuse"]
libfuse = ["pkg-config"]
serializable = ["serde"]
abi-7-9 = []
abi-7-10 = ["abi-7-9"]
abi-7-11 = ["abi-7-10"]
abi-7-12 = ["abi-7-11"]
abi-7-13 = ["abi-7-12"]
abi-7-14 = ["abi-7-13"]
abi-7-15 = ["abi-7-14"]
abi-7-16 = ["abi-7-15"]
abi-7-17 = ["abi-7-16"]
abi-7-18 = ["abi-7-17"]
abi-7-19 = ["abi-7-18"]
abi-7-20 = ["abi-7-19"]
abi-7-21 = ["abi-7-20"]
abi-7-22 = ["abi-7-21"]
abi-7-23 = ["abi-7-22"]
abi-7-24 = ["abi-7-23"]
abi-7-25 = ["abi-7-24"]
abi-7-26 = ["abi-7-25"]
abi-7-27 = ["abi-7-26"]
abi-7-28 = ["abi-7-27"]
abi-7-29 = ["abi-7-28"]
abi-7-30 = ["abi-7-29"]
abi-7-31 = ["abi-7-30"]
